# AUB-HTP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  run-tests.yml  sphinx.yml
aub_htp/: __init__.py  _alpha_stable.py  statistics.py
aub_htp/alpha_stable_pdf/: pdf.py
aub_htp/alpha_stable_pdf/data/: entropy_interpolator.npz  (+3 more)
aub_htp/heavy_tailed_ml/: __init__.py  kmeans.py
aub_htp/machine_learning/: __init__.py  covariance.py  kmeans.py  pca.py  regressor.py
aub_htp/pdf/: __init__.py  pdf.py  skorohod.py  zolotarev.py
aub_htp/random/: __init__.py  alpha_stable_sampler.py  rng.py  spectral_measure_sampler.py  util.py
aub_htp/statistics/: __init__.py  statistics.py
docs/examples/: butterfly_sampler.py  estimate_power_and_location.py  generate_a_stable_pdf.py  interactive_pdf.ipynb  kmeans_clustering_example.py  kmeans_comparison_with_sklearn.py  learn_shift.ipynb  playground.py  plot_alpha_stable_sampler.py  plot_multivariate_sampling.py  plot_parametrizations.py  plot_univariate_sampling.py  rng.py  sample_alpha_stable.ipynb  sample_spectral_measure.py  scipy_wrapper_rvs.py  simple_pdf.py  wael.py
docs/source/: api.rst  conf.py  index.rst  install.rst
testground/: compare_with_scipy.py  generate_a_stable_pdf.py  plot_error.py  sample_alpha_stable.ipynb  sample_discrete_vector.py  scipy_wrapper.py  scipy_wrapper_comparison.py  scipy_wrapper_rvs.py  simple_pdf.py  test.py  test2.py
tests/: alpha_stable_pdf_dimension_test.py  alpha_stable_test.py  kmeans_test.py  package_health_test.py  regression_test.py  statistics_test.py
(+12 files in other folders)
