[project]
name = "aub-htp"
version = "1.0.0"
description = "AUB's Heavy-Tails Package - PDF generation and ML for heavy-tailed distributions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scipy-stubs~=1.15.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.21",
    "ipython>=8.38.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.7.0",
    "notebook>=7.5.3",
    "plotly>=6.5.2",
    "pytest>=7.0.0",
    "scikit-learn>=1.7.2",
]
